# federated-keyword-spotting

./: README.md  kws_analysis.ipynb  pyproject.toml
flower_kws/: __init__.py  audio.py  client_app.py  server_app.py  task.py
