[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-kws"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[audio]>=0.5.0",
    "torchaudio==2.6.0",
    "jupyter==1.1.1",
    "matplotlib==3.10.1",
    "librosa==0.11.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flower_kws.server_app:app"
clientapp = "flower_kws.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.25
local-epochs = 1

[tool.flwr.federations]
default = "default-simulation"

[tool.flwr.federations.default-simulation]
options.num-supernodes = 100 # This comes from grouping speakers in the dataset into groups of 20 speakers (see task.py)

[tool.flwr.federations.gpu-simulation]
options.num-supernodes = 100 # This comes from grouping speakers in the dataset into groups of 20 speakers (see task.py)
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.1